Updated CORS Configuration
- added cors properties